--- a/languages/wp-statuses-fr_FR.po
+++ b/languages/wp-statuses-fr_FR.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP Statuses 1.0.0\n"
 "Report-Msgid-Bugs-To: https://github.com/imath/wp-statuses/issues\n"
-"POT-Creation-Date: 2017-02-26 10:23:55+00:00\n"
-"PO-Revision-Date: 2017-02-26 11:24+0100\n"
+"POT-Creation-Date: 2017-03-04 13:35:15+00:00\n"
+"PO-Revision-Date: 2017-03-04 14:41+0100\n"
 "Last-Translator: imath <mathchristo@yahoo.fr>\n"
 "Language-Team: FRENCH <imath@cluster.press>\n"
 "Language: fr\n"
@@ -15,145 +15,177 @@ msgstr ""
 "X-Generator: Poedit 1.7.1\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: inc/admin/classes/class-wp-statuses-admin.php:147
+#: inc/admin/classes/class-wp-statuses-admin.php:154
 msgid "&mdash; No Change &mdash;"
 msgstr "&mdash; Aucun changement &mdash;"
 
-#: inc/admin/classes/class-wp-statuses-admin.php:198
+#: inc/admin/classes/class-wp-statuses-admin.php:205
 msgid "Publishing"
 msgstr "﻿Publication"
 
-#: inc/admin/classes/class-wp-statuses-admin.php:296
-msgid "Save"
-msgstr "Enregistrer"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:304
-msgid "Save Draft"
-msgstr "Enregistrer le brouillon"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:308
-msgid "Save as Pending"
-msgstr "Mettre à relire"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:322
+#: inc/admin/classes/class-wp-statuses-admin.php:266
+#: inc/admin/classes/class-wp-statuses-admin.php:349
 msgid "Preview Changes"
 msgstr "Prévisualiser les modifications"
 
-#: inc/admin/classes/class-wp-statuses-admin.php:322
+#: inc/admin/classes/class-wp-statuses-admin.php:267
+#: inc/admin/classes/class-wp-statuses-admin.php:349
 msgid "Preview"
 msgstr "Aperçu"
 
-#: inc/admin/classes/class-wp-statuses-admin.php:408
+#: inc/admin/classes/class-wp-statuses-admin.php:323 inc/core/custom.php:31
+msgid "Save"
+msgstr "Enregistrer"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:331
+msgid "Save Draft"
+msgstr "Enregistrer le brouillon"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:335
+msgid "Save as Pending"
+msgstr "Mettre à relire"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:435
 msgid "Set status"
 msgstr "État"
 
-#: inc/admin/classes/class-wp-statuses-admin.php:459
+#: inc/admin/classes/class-wp-statuses-admin.php:486
 msgid "Stick this post to the front page"
 msgstr "Mettre cet article en avant sur la page d&rsquo;accueil"
 
-#: inc/admin/classes/class-wp-statuses-admin.php:466
+#: inc/admin/classes/class-wp-statuses-admin.php:493
 msgid "Password:"
 msgstr "Mot de passe&nbsp;:"
 
 #. translators: Publish box date format, see https:secure.php.net/date
-#: inc/admin/classes/class-wp-statuses-admin.php:503
+#: inc/admin/classes/class-wp-statuses-admin.php:530
 msgid "M j, Y @ H:i"
 msgstr "j F Y \\à G \\h i \\m\\i\\n "
 
-#. translators: Post date information. 1: Date on which the post is currently
-#. scheduled to be published
-#: inc/admin/classes/class-wp-statuses-admin.php:510
-msgid "Scheduled for: <b>%1$s</b>"
-msgstr "Planifié pour&nbsp;: <b>%1$s</b>"
+#. translators: Post revisions heading. 1: The number of available revisions
+#: inc/admin/classes/class-wp-statuses-admin.php:567
+msgid "Revisions: %s"
+msgstr "Révisions&nbsp;: %s"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:571
+msgid "Browse revisions"
+msgstr "Parcourir les révisions"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:582
+msgid "Edit"
+msgstr "Modifier"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:583
+msgid "Edit date and time"
+msgstr "Modifier la date et l’heure"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:587
+msgid "Date and time"
+msgstr "Date et heure"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:629
+msgid "Submit for Review"
+msgstr "Soumettre à relecture"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:634
+#: inc/core/classes/class-wp-statuses-core-status.php:179
+msgid "Publish"
+msgstr "Publier"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:637
+msgid "Schedule"
+msgstr "Planifier"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:652
+msgid "Delete Permanently"
+msgstr "Supprimer définitivement"
+
+#: inc/admin/classes/class-wp-statuses-admin.php:652
+msgid "Move to Trash"
+msgstr "Déplacer dans la corbeille"
+
+#: inc/core/classes/class-wp-statuses-core-status.php:180
+msgid "Update"
+msgstr "Mettre à jour"
+
+#: inc/core/classes/class-wp-statuses-core-status.php:181
+msgid "Publish on:"
+msgstr "Publier le&nbsp;:"
+
+#. translators: Post date information. 1: Date on which the post is to be
+#. published
+#: inc/core/classes/class-wp-statuses-core-status.php:183
+msgid "Publish on: <b>%1$s</b>"
+msgstr "Publier le&nbsp;: <b>%1$s</b>"
+
+#: inc/core/classes/class-wp-statuses-core-status.php:184
+msgid "Published on:"
+msgstr "Publié le&nbsp;:"
 
 #. translators: Post date information. 1: Date on which the post was published
-#: inc/admin/classes/class-wp-statuses-admin.php:515
+#: inc/core/classes/class-wp-statuses-core-status.php:186
 msgid "Published on: <b>%1$s</b>"
 msgstr "Publié le&nbsp;: <b>%1$s</b>"
 
-#: inc/admin/classes/class-wp-statuses-admin.php:519
-#: inc/admin/classes/class-wp-statuses-admin.php:536
+#: inc/core/classes/class-wp-statuses-core-status.php:187
 msgid "Publish <b>immediately</b>"
 msgstr "Publier <b>tout de suite</b>"
 
 #. translators: Post date information. 1: Date on which the post is to be
 #. published
-#: inc/admin/classes/class-wp-statuses-admin.php:524
+#: inc/core/classes/class-wp-statuses-core-status.php:189
 msgid "Schedule for: <b>%1$s</b>"
 msgstr "Planifier pour : <b>%1$s</b>"
 
-#. translators: Post date information. 1: Date on which the post is to be
-#. published
-#: inc/admin/classes/class-wp-statuses-admin.php:529
-msgid "Publish on: <b>%1$s</b>"
-msgstr "Publier le&nbsp;: <b>%1$s</b>"
-
-#. translators: Post revisions heading. 1: The number of available revisions
-#: inc/admin/classes/class-wp-statuses-admin.php:544
-msgid "Revisions: %s"
-msgstr "Révisions&nbsp;: %s"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:548
-msgid "Browse revisions"
-msgstr "Parcourir les révisions"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:559
-msgid "Edit"
-msgstr "Modifier"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:560
-msgid "Edit date and time"
-msgstr "Modifier la date et l’heure"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:564
-msgid "Date and time"
-msgstr "Date et heure"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:597
-msgid "Update"
-msgstr "Mettre à jour"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:606
-msgid "Submit for Review"
-msgstr "Soumettre à relecture"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:611
-msgid "Publish"
-msgstr "Publier"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:614
-msgid "Schedule"
-msgstr "Planifier"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:629
-msgid "Delete Permanently"
-msgstr "Supprimer définitivement"
-
-#: inc/admin/classes/class-wp-statuses-admin.php:629
-msgid "Move to Trash"
-msgstr "Déplacer dans la corbeille"
-
-#: inc/core/classes/class-wp-statuses-core-status.php:201
+#: inc/core/classes/class-wp-statuses-core-status.php:206
 msgid "Publicly published"
 msgstr "Publier publiquement"
 
-#: inc/core/classes/class-wp-statuses-core-status.php:202
+#: inc/core/classes/class-wp-statuses-core-status.php:207
 msgid "Published"
 msgstr "Publié"
 
-#: inc/core/classes/class-wp-statuses-core-status.php:208
+#: inc/core/classes/class-wp-statuses-core-status.php:213
 msgid "Privately Published"
 msgstr "Publier en privé"
 
-#: inc/core/classes/class-wp-statuses-core-status.php:209
+#: inc/core/classes/class-wp-statuses-core-status.php:214
+msgid "Save as Private"
+msgstr "Enregistrer en Privé"
+
+#: inc/core/classes/class-wp-statuses-core-status.php:215
+msgid "Save as Private on:"
+msgstr "Enregistrer en Privé le&nbsp;:"
+
+#. translators: Post date information. 1: Date on which the post is to be saved
+#. privately
+#: inc/core/classes/class-wp-statuses-core-status.php:217
+msgid "Save as Private on: <b>%1$s</b>"
+msgstr "Enregistrer en Privé le&nbsp;: <b>%1$s</b>"
+
+#: inc/core/classes/class-wp-statuses-core-status.php:218
+msgid "Saved as Private on:"
+msgstr "Enregistré en Privé le&nbsp;:"
+
+#. translators: Post date information. 1: Date on which the post was saved
+#. privately
+#: inc/core/classes/class-wp-statuses-core-status.php:220
+msgid "Saved as Private on: <b>%1$s</b>"
+msgstr "Enregistré en Privé le&nbsp;: <b>%1$s</b>"
+
+#: inc/core/classes/class-wp-statuses-core-status.php:221
+msgid "Save as private <b>now</b>"
+msgstr "Enregistrer en Privé  <b>maintenant</b>"
+
+#: inc/core/classes/class-wp-statuses-core-status.php:222
 msgid "Private"
 msgstr "Privé"
 
-#: inc/core/classes/class-wp-statuses-core-status.php:215
+#: inc/core/classes/class-wp-statuses-core-status.php:228
 msgid "Pending Review"
 msgstr "En attente de relecture"
 
-#: inc/core/classes/class-wp-statuses-core-status.php:221
+#: inc/core/classes/class-wp-statuses-core-status.php:234
 msgid "Draft"
 msgstr "Brouillon"
 
@@ -163,33 +195,56 @@ msgid_plural "Restricted to members <span class=\"count\">(%s)</span>"
 msgstr[0] "Restreint aux membres <span class=\"count\">(%s)</span>"
 msgstr[1] "Restreints aux membres <span class=\"count\">(%s)</span>"
 
-#: inc/core/custom.php:31
+#: inc/core/custom.php:32
 msgid "Restricted"
 msgstr "Restreint"
 
-#: inc/core/custom.php:83
+#: inc/core/custom.php:57
 msgid "Please %s to view this content."
 msgstr "Merci de vous %s pour voir ce contenu."
 
-#: inc/core/custom.php:86
+#: inc/core/custom.php:60
 msgid "log in"
 msgstr "connecter"
 
-#: inc/core/custom.php:98
+#: inc/core/custom.php:72 inc/core/custom.php:83
 msgid "Archive"
 msgstr "Archive"
 
-#: inc/core/custom.php:99
+#: inc/core/custom.php:73
 msgid "Archived <span class=\"count\">(%s)</span>"
 msgid_plural "Archived <span class=\"count\">(%s)</span>"
 msgstr[0] "Archivé <span class=\"count\">(%s)</span>"
 msgstr[1] "Archivés <span class=\"count\">(%s)</span>"
 
-#: inc/core/custom.php:108 inc/core/custom.php:109
+#: inc/core/custom.php:82 inc/core/custom.php:91
 msgid "Archived"
 msgstr "Archivé"
 
-#: inc/core/custom.php:110
+#: inc/core/custom.php:84
+msgid "Archive on:"
+msgstr "Archiver le :"
+
+#. translators: Post date information. 1: Date on which the post is to be
+#. archived
+#: inc/core/custom.php:86
+msgid "Archive on: <b>%1$s</b>"
+msgstr "Archiver le&nbsp;: <b>%1$s</b>"
+
+#: inc/core/custom.php:87
+msgid "Archived on:"
+msgstr "Archivé le&nbsp;:"
+
+#. translators: Post date information. 1: Date on which the post was archived
+#: inc/core/custom.php:89
+msgid "Archived on: <b>%1$s</b>"
+msgstr "Archivé le&nbsp;: <b>%1$s</b>"
+
+#: inc/core/custom.php:90
+msgid "Archive <b>now</b>"
+msgstr "Archiver <b>maintenant</b>"
+
+#: inc/core/custom.php:92
 msgid "Add to archives"
 msgstr "Ajouter aux archives"
 
@@ -227,7 +282,7 @@ msgstr "imath"
 msgid "https://imathi.eu/"
 msgstr "https://imathi.eu/"
 
-#: inc/admin/classes/class-wp-statuses-admin.php:547
+#: inc/admin/classes/class-wp-statuses-admin.php:570
 msgctxt "revisions"
 msgid "Browse"
 msgstr "Parcourir"
