--- a/languages/wp-statuses-de_DE.po
+++ b/languages/wp-statuses-de_DE.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: WP Statuses 1.0.0\n"
 "Report-Msgid-Bugs-To: https://github.com/imath/wp-statuses/issues\n"
 "POT-Creation-Date: 2017-03-04 13:35:15+00:00\n"
-"PO-Revision-Date: 2017-05-05 08:01+0000\n"
+"PO-Revision-Date: 2017-05-05 08:12+0000\n"
 "Last-Translator: Michael Freund <freund@mediastuttgart.de>\n"
-"Language-Team: \n"
-"Language: de_DE\n"
+"Language-Team: German\n"
+"Language: de-DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Loco - https://localise.biz/\n"
+"Plural-Forms: nplurals=2; plural=n != 1\n"
 "X-Loco-Template: ../../languages/plugins/wp-statuses-de_DE_formal.po"
 
 #: inc/admin/classes/class-wp-statuses-admin.php:154
@@ -97,7 +97,7 @@ msgstr "Planen"
 
 #: inc/admin/classes/class-wp-statuses-admin.php:652
 msgid "Delete Permanently"
-msgstr "Supprimer définitivement"
+msgstr "Permanent löschen"
 
 #: inc/admin/classes/class-wp-statuses-admin.php:652
 msgid "Move to Trash"
@@ -128,7 +128,7 @@ msgstr "Veröffentlicht am: <b>%1$s</b>"
 
 #: inc/core/classes/class-wp-statuses-core-status.php:187
 msgid "Publish <b>immediately</b>"
-msgstr "Publier <b>tout de suite</b>"
+msgstr "Jetzt veröffentlichen"
 
 #. translators: Post date information. 1: Date on which the post is to be
 #. published
