--- a/languages/wp-statuses-fr_FR.po
+++ b/languages/wp-statuses-fr_FR.po
@@ -2,12 +2,12 @@
 # This file is distributed under the GNU/GPL 2.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP Statuses 1.0.0\n"
+"Project-Id-Version: WP Statuses 1.2.4\n"
 "Report-Msgid-Bugs-To: https://github.com/imath/wp-statuses/issues\n"
-"POT-Creation-Date: 2017-06-22 02:29:38+00:00\n"
-"PO-Revision-Date: 2017-06-22 04:30+0100\n"
+"POT-Creation-Date: 2017-10-18 05:47:13+00:00\n"
+"PO-Revision-Date: 2017-10-18 07:47+0100\n"
 "Last-Translator: imath <mathchristo@yahoo.fr>\n"
-"Language-Team: FRENCH <imath@cluster.press>\n"
+"Language-Team: FRENCH <contact@imathi.eu>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
